# Snake

./: .gitignore  CMakeLists.txt
include/: config.h  core.h  draw.h  main.h
libs/SDL3/lib/pkgconfig/: sdl3.pc
src/: core.cpp  draw.cpp  main.cpp
